--- a/Web/Web/Pages/Account.cshtml
+++ b/Web/Web/Pages/Account.cshtml
@@ -191,7 +191,7 @@
                                                     <a href="/EditMeeting/@meeting.Id" class="btn btn-outline-primary btn-sm">
                                                         <i data-feather="edit" width="14" height="14"></i>
                                                     </a>
-                                                    <a href="/Meeting/@meeting.Id" class="btn btn-outline-info btn-sm">
+                                                    <a href="/ViewMeeting/@meeting.Id" class="btn btn-outline-info btn-sm">
                                                         <i data-feather="eye" width="14" height="14"></i>
                                                     </a>
                                                     <button class="btn btn-outline-danger btn-sm" onclick="deleteEvent(@meeting.Id, '@meeting.Title')">
