--- a/Web/Web/Pages/Index.cshtml
+++ b/Web/Web/Pages/Index.cshtml
@@ -75,6 +75,9 @@
                         </div>
                     }
                 </div>
+                <h5 class="mb-3 text-center">
+                    <a href="/Meetings" class="white-link">Больше мероприятий</a>
+                </h5>
             </div>
         </div>
     </main>
