--- a/Web/Web/Pages/Register.cshtml
+++ b/Web/Web/Pages/Register.cshtml
@@ -88,6 +88,15 @@
                                     </div>
                                 </div>
 
+                                <div class="mb-4">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="isNotificationOn" name="isNotificationOn" value="true" checked>
+                                        <label class="form-check-label" for="isNotificationOn">
+                                            Получать уведомления
+                                        </label>
+                                    </div>
+                                </div>
+
                                 <button type="submit" class="btn btn-primary w-100" id="submitButton">Зарегистрироваться</button>
                             </form>
 
@@ -158,7 +167,7 @@
             submitButton.disabled = true;
             submitButton.textContent = 'Регистрация...';
 
-            return true;
+            return true;    
         }
     </script>
 </body>
