--- a/Web/Web/Pages/Login.cshtml
+++ b/Web/Web/Pages/Login.cshtml
@@ -25,7 +25,7 @@
                 <div class="col-md-6 col-lg-5">
                     <div class="card">
                         <div class="card-header">
-                            <h4>Создать аккаунт</h4>
+                            <h4>Войти в аккаунт</h4>
                             <p class="mb-0">Присоединяйтесь к нашей платформе</p>
                         </div>
                         <div class="card-body p-4">
