--- a/Web/Web/Pages/Account.cshtml
+++ b/Web/Web/Pages/Account.cshtml
@@ -153,7 +153,7 @@
                             </svg>
                             <h5>Вы не участвуете ни в каких мероприятиях</h5>
                             <p>Найдите интересные мероприятия и присоединяйтесь к ним!</p>
-                            <a href="/Events" class="btn btn-primary">Найти мероприятия</a>
+                            <a href="/Meetings" class="btn btn-primary">Найти мероприятия</a>
                         </div>
                     }
                 </div>
